--- a/Oracle_19c/With_RPMS/Readme
+++ b/Oracle_19c/With_RPMS/Readme
@@ -1,1 +1,1 @@
-Coming Soon
+You can read about the detailed execution of the steps at https://www.linkedin.com/pulse/create-oracle-19900-docker-image-using-rpms-ravi-verma/.
